Add mapping for openAPIDocument

--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -9,6 +9,7 @@ transform:
       | .ldContext |= if . then { "prof:hasArtifact": . , "prof:hasRole": "role:mapping", "dct:format": "application/ld+json", "dct:conformsTo": "https://www.w3.org/TR/json-ld11/" } else null end
       | .shaclShapes |= (if length > 0 then to_entries | map({ "prof:hasArtifact": .value, "rdfs:seeAlso": "bblocks://\(.key)", "prof:hasRole": "role:validation", "dct:format": "text/turtle", "dct:conformsTo": "shacl:" }) else null end)
       | .schema |= (if length > 0 then to_entries | map({ "prof:hasArtifact": .value , "prof:hasRole": "role:schema", "dct:format": .key, "dct:conformsTo": "https://json-schema.org/draft/2020-12/schema" }) else null end)
+      | .openAPIDocument |= if . then { "prof:hasArtifact": . , "prof:hasRole": "role:schema", "dct:format": "application/yaml", "dct:conformsTo": "https://spec.openapis.org/oas/v3.1.0.html" } else null end
       | .dependsOn |= if length > 0 then map("bblocks://\(.)") else null end
       | .profileOf |= if length > 0 then map("bblocks://\(.)") else null end
       | if $CS_URI then ."skos:topConceptOf" = {"@id": $CS_URI} end
