Add links to RDF register

--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -153,3 +153,6 @@ context:
     rdfData:
       '@id': prof:hasResource
       '@type': '@id'
+    links:
+      '@id': prof:hasResource
+      '@context': https://opengeospatial.github.io/bblocks/annotated-schemas/ogc-utils/json-link/context.jsonld
